// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h1 tag it renders 1`] = `
.c0 {
  font-size: 1.5em;
}

<h1
  className="c0"
/>
`;

exports[`p tag it renders 1`] = `
.c0 {
  font-size: 1em;
}

<p
  className="c0"
/>
`;
